# OCR-U12

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py  queue.py
app/static/: style.css
app/templates/: base.html  index.html  job.html
app/templates/partials/: extraction_row.html  job_content.html
app/worker/: callbacks.py  ensemble.py  extract.py  hybrid.py  ocr.py  qari.py  rtl.py  vlm.py
